part_3/network_policy_examples/allow_dns_access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - namespaceSelector: {} # all namespaces (all pods)
    ports:
    - protocol: UDP
      port: 53
