part_3/network_policy_examples/allow_frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
      matchLabels:
        role: frontend # allowed source pods
    ports:
    - protocol: TCP
      port: 80
  - Egress
