part_3/network_policy_examples/block_ips.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 203.0.113.0/24 # external IP range
    ports:
    - protocol: TCP
      port: 44
